--- a/weather/src/assets/icons/Cloud.scss
+++ b/weather/src/assets/icons/Cloud.scss
@@ -1,4 +1,9 @@
+@use "../../styles/mixins" as *;
 @import "../../styles/variables";
+
+.container {
+  position: relative;
+}
 
 .icon__cloud {
   width: 18rem;
@@ -38,13 +43,7 @@
   }
 
   .icon__shadow {
-    position: absolute;
-    left: 30rem;
-    top: -25rem;
-    width: 18rem;
-    height: 9rem;
-    border-radius: 50%;
-    box-shadow: -36rem 38rem 7rem #4077b2;
+    @include shadow;
   }
 }
 
