--- a/weather/src/assets/icons/PartlyCloudy.scss
+++ b/weather/src/assets/icons/PartlyCloudy.scss
@@ -1,5 +1,5 @@
 @use "../../styles/mixins" as *;
-@import "../../styles/variables";
+@use "../../styles/variables" as *;
 
 .container {
   position: relative;
