--- a/weather/src/styles.scss
+++ b/weather/src/styles.scss
@@ -6,11 +6,17 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow: hidden;
+}
+
 body {
   display: flex;
   flex-direction: column;
   gap: 50px;
-  justify-content: center;
+  padding: 100px;
+  // justify-content: center;
   align-items: center;
   min-height: 100vh;
   background: linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed;
