--- a/weather/src/styles.scss
+++ b/weather/src/styles.scss
@@ -6,18 +6,20 @@
   box-sizing: border-box;
 }
 
-html,
-body {
-  overflow: hidden;
-}
+// html,
+// body {
+//   overflow: hidden;
+// }
 
 body {
   display: flex;
   flex-direction: column;
   gap: 50px;
-  padding: 100px;
+  padding: 50px;
   // justify-content: center;
-  align-items: center;
+  // align-items: center;
+  max-width: 960px;
+  margin: 0 auto;
   min-height: 100vh;
   background: linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed;
 }
