--- a/weather/src/styles/_mixins.scss
+++ b/weather/src/styles/_mixins.scss
@@ -7,5 +7,5 @@
   width: 18rem;
   height: 9rem;
   border-radius: 50%;
-  box-shadow: -36rem 38rem 7rem darken($bg_blue, 10%);
+  box-shadow: -36rem 38rem 7rem darken($bg_light_blue, 5%);
 }
