Changes on styles.scss

--- a/weather/src/assets/icons/PartlyCloudy.scss
+++ b/weather/src/assets/icons/PartlyCloudy.scss
@@ -2,7 +2,7 @@
 @use "../../styles/variables" as *;
 
 .container {
-  position: relative;
+  // position: relative;
 
   .cloud {
     position: absolute;
