--- a/weather/src/styles/_variables.scss
+++ b/weather/src/styles/_variables.scss
@@ -1,7 +1,10 @@
 $bg_light_blue: #b4e0f8;
 $bg_blue: #31a1ec;
+$baby_blue: #d7ecfd;
 $white: #fff;
 
 $yellow: #f0ca43;
 $darker_yellow: #f0b343;
 $orange: #f09559;
+
+$cloud_color: 255, 255, 255;
