--- a/weather/src/assets/icons/Cloud.scss
+++ b/weather/src/assets/icons/Cloud.scss
@@ -9,6 +9,7 @@
   width: 18rem;
   height: 12rem;
   background: rgba(225, 225, 225, 0.8);
+
   opacity: 1;
   // backdrop-filter: blur(0px);
   clip-path: url(#cloud-path);
@@ -47,7 +48,10 @@
   }
 }
 
-@supports ((-webkit-backdrop-filter: blur(0.5625rem)) or (backdrop-filter: blur(0.5625rem))) {
+@supports (
+  (-webkit-backdrop-filter: blur(0.5625rem)) or
+    (backdrop-filter: blur(0.5625rem))
+) {
   .icon__cloud {
     background: rgba(225, 225, 225, 0.5);
     -webkit-backdrop-filter: blur(0.5625rem);
