--- a/weather/src/components/CurrentWeather/CurrentWeather.module.scss
+++ b/weather/src/components/CurrentWeather/CurrentWeather.module.scss
@@ -1,5 +1,9 @@
+@use "../../styles/variables" as *;
+
 .box {
-  background: #fff;
+  background: $baby_blue;
+  //   background: linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed;
+
   height: 20rem;
   //   width: 60rem;
 
@@ -12,6 +16,6 @@
 
 .icon_container {
   position: absolute;
-  left: 20%;
-  top: -30%;
+  right: 20%;
+  top: -25%;
 }
