--- a/weather/src/styles.scss
+++ b/weather/src/styles.scss
@@ -8,21 +8,28 @@
 
 // html,
 // body {
-//   overflow-x: hidden;
 // }
 
 body {
-  padding: 1.25rem;
-  width: 60rem;
+  overflow-x: hidden;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+
+  padding: 2.5rem;
+  width: 68.75rem;
   margin: 0 auto;
-  // min-height: 100vh;
+  // height: 100vh;
   background: linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 .app {
   display: flex;
   flex-direction: column;
-  gap: 100px;
+  gap: 1.6rem;
 }
 
 @keyframes float {
