--- a/weather/src/components/SearchBar/SearchBar.module.scss
+++ b/weather/src/components/SearchBar/SearchBar.module.scss
@@ -2,11 +2,36 @@
 
 .search_bar {
   background: $baby_blue;
-  height: 3rem;
+  // height: 3rem;
 
   border-radius: 25px;
   padding: 10px;
   box-shadow: 0 2px 2px rgb(0, 0, 0, 0.2);
-
   margin-bottom: 40px;
+
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  .icon {
+    font-size: 1.2rem;
+    color: $text_color;
+  }
+
+  input {
+    width: 100%;
+    font-size: 1.4rem;
+    color: $text_color;
+    border: none;
+    background: transparent;
+
+    &::placeholder {
+      font-size: 1.2rem;
+      color: $title_color;
+    }
+
+    &:focus {
+      outline: red;
+    }
+  }
 }
