Added openWeather API

--- a/weather/src/components/SearchBar/SearchBar.module.scss
+++ b/weather/src/components/SearchBar/SearchBar.module.scss
@@ -2,11 +2,11 @@
 
 .search_bar {
   background: $baby_blue;
-  // height: 3rem;
+  height: 3.5rem;
 
-  border-radius: 25px;
-  padding: 10px;
-  box-shadow: 0 2px 2px rgb(0, 0, 0, 0.2);
+  border-radius: 50px;
+  padding: 1.5625rem;
+  box-shadow: 0 2px 2px rgb(0, 0, 0, 0.1);
   margin-bottom: 40px;
 
   display: flex;
