--- a/weather/src/components/CurrentWeather/CurrentWeather.module.scss
+++ b/weather/src/components/CurrentWeather/CurrentWeather.module.scss
@@ -8,24 +8,31 @@
   border-radius: 25px;
   padding: 40px;
   box-shadow: 0 2px 4px rgb(0, 0, 0, 0.2);
-
   position: relative;
-}
 
-.icon_container {
-  position: absolute;
-  right: 20%;
-  top: -25%;
-}
-
-.weather_box_grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-}
 
-.test {
-  background: #aea;
+  .weather_info {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0 1.25rem;
+    background-color: #aea;
+
+    .city_name {
+      color: $title_color;
+      font-size: 2rem;
+      font-weight: 600;
+    }
+  }
+
+  .icon_container {
+    position: absolute;
+    right: 20%;
+    top: -25%;
+  }
 }
 
 @media (max-width: 760px) {
