--- a/weather/src/components/Header/Header.module.scss
+++ b/weather/src/components/Header/Header.module.scss
@@ -1,5 +1,22 @@
+@use "../../styles/variables" as *;
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  .link_icon {
+    &:link,
+    &:visited {
+      font-size: 2rem;
+      text-decoration: none;
+      color: $title_color;
+      transition: all 0.2s;
+    }
+
+    &:hover,
+    &:active {
+      color: $text_color;
+    }
+  }
 }
