Changes on CurrentWeather layout

--- a/weather/src/styles/_variables.scss
+++ b/weather/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $bg_light_blue: #b4e0f8;
 $bg_blue: #31a1ec;
-$baby_blue: #d7ecfd;
+$baby_blue: rgba(215, 236, 253, 1);
 $white: #fff;
 
 $yellow: #f0ca43;
