--- a/weather/src/components/CurrentWeather/CurrentWeather.module.scss
+++ b/weather/src/components/CurrentWeather/CurrentWeather.module.scss
@@ -11,8 +11,19 @@
   position: relative;
 
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1.5fr;
   gap: 20px;
+
+  .city_info {
+    display: flex;
+    flex-direction: column;
+
+    .icon_container {
+      position: absolute;
+      left: 20%;
+      top: -10%;
+    }
+  }
 
   .weather_info {
     display: flex;
@@ -23,30 +34,21 @@
 
     .city_name {
       color: $title_color;
-      font-size: 2rem;
+      font-size: 2.5rem;
       font-weight: 600;
     }
-  }
-
-  .icon_container {
-    position: absolute;
-    right: 20%;
-    top: -25%;
   }
 }
 
 @media (max-width: 760px) {
   .weather_box {
     height: 40rem;
-  }
-
-  .weather_box_grid {
     grid-template-columns: 1fr;
   }
 
-  .icon_container {
-    position: absolute;
-    right: 15%;
-    top: -10%;
-  }
+  // .icon_container {
+  //   position: absolute;
+  //   right: 15%;
+  //   top: -10%;
+  // }
 }
