--- a/weather/src/styles/_variables.scss
+++ b/weather/src/styles/_variables.scss
@@ -2,6 +2,7 @@ $bg_light_blue: #b4e0f8;
 $bg_blue: #31a1ec;
 $baby_blue: rgba(215, 236, 253, 1);
 $white: #fff;
+$black: #000;
 
 $yellow: #f0ca43;
 $darker_yellow: #f0b343;
