--- a/weather/src/styles/_variables.scss
+++ b/weather/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $bg_light_blue: #b4e0f8;
 $bg_blue: #31a1ec;
-$baby_blue: rgba(215, 236, 253, 1);
+$baby_blue: rgb(226, 240, 251);
 $white: #fff;
 $black: #000;
 
