--- a/weather/src/styles.scss
+++ b/weather/src/styles.scss
@@ -14,8 +14,10 @@ body {
   padding: 1.25rem 2.5rem;
   width: 68.75rem;
   margin: 0 auto;
-  // height: 100vh;
-  background: linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed;
+  min-height: 100vh;
+  background: url(./assets/clouds2.svg) repeat,
+    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed;
+  background-size: auto;
 }
 
 body::-webkit-scrollbar {
