Added more svgs for background

--- a/weather/src/styles/_variables.scss
+++ b/weather/src/styles/_variables.scss
@@ -1,6 +1,10 @@
 $bg_light_blue: #b4e0f8;
 $bg_blue: #31a1ec;
-$baby_blue: rgb(226, 240, 251);
+
+// $bg_light_blue: #092b56;
+// $bg_blue: #051a33;
+
+$baby_blue: rgba(226, 240, 251, 1);
 $white: #fff;
 $black: #000;
 
