--- a/weather/src/styles.scss
+++ b/weather/src/styles.scss
@@ -15,14 +15,21 @@ body {
   width: 68.75rem;
   margin: 0 auto;
   min-height: 100vh;
-  background: url(./assets/clouds2.svg) repeat,
+  background: url(./assets/Clouds-200s.svg) repeat,
     linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed;
   background-size: auto;
+
+  &::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+  }
 }
 
-body::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
-}
+// @media (max-width: 760px) {
+//   body {
+//     background: url(./assets/Clouds-200s.svg) repeat,
+//       linear-gradient(to bottom, $yellow, $orange) fixed;
+//   }
+// }
 
 .app {
   display: flex;
