Added container className to center divs on Home

--- a/weather/src/styles/_night.scss
+++ b/weather/src/styles/_night.scss
@@ -1,6 +1,7 @@
 $night: (
   background_color: (
     url(../assets/Clouds-200s.svg) repeat,
+    // url(../assets/nightsky.svg) repeat,
     linear-gradient(to bottom, #1f6cd8, #8d94ee, #bda1e1, #ea9fa8, #c66496)
       fixed,
   ),
