--- a/weather/src/components/Home/Home.module.scss
+++ b/weather/src/components/Home/Home.module.scss
@@ -5,23 +5,21 @@
   overflow-x: hidden;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
-
   padding: 1.25rem 2.5rem;
 
-  // TODO change body to .app and remove width
   //   width: 68.75rem;
   //   margin: 0 auto;
   min-height: 100vh;
   @include themify("background", "background_color");
-
   background-size: auto;
 
   &::-webkit-scrollbar {
     display: none; /* Safari and Chrome */
   }
 
-  //   div {
-  //     width: 68.75rem;
-  //     margin: 0 auto;
-  //   }
+  .container {
+    width: 69rem;
+    margin: 0 auto;
+    width: 100%;
+  }
 }
