--- a/weather/src/styles/_day.scss
+++ b/weather/src/styles/_day.scss
@@ -1,6 +1,14 @@
+@use "./variables" as *;
+
 $day: (
   background_color: (
     url(../assets/Clouds-200s.svg) repeat,
+    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
+  ),
+
+  // TODO for wider screens
+  background_color_wide: (
+    url(../assets/clouds_bg.svg) repeat,
     linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   secondary: #eddc2a,
