--- a/weather/src/styles/_night.scss
+++ b/weather/src/styles/_night.scss
@@ -7,6 +7,7 @@ $night: (
     linear-gradient(to bottom, #1f6cd8, #8d94ee, #bda1e1, #ea9fa8, #c66496)
       fixed,
   ),
-  secondary: #26ccc9,
+  header_color: #aea,
+
   tertiary: #85afaf,
 );
