--- a/weather/src/styles/_night.scss
+++ b/weather/src/styles/_night.scss
@@ -3,11 +3,12 @@
 $night: (
   background_color: (
     url(../assets/Clouds-200s.svg) repeat,
-    // url(../assets/nightsky.svg) repeat,
+    url(../assets/nightsky.svg) repeat,
     linear-gradient(to bottom, #1f6cd8, #8d94ee, #bda1e1, #ea9fa8, #c66496)
       fixed,
   ),
-  header_color: #aea,
-
-  tertiary: #85afaf,
+  searchbar_color: #aea,
+  weather_box_color: #1f6cd8,
+  text_color: $white,
+  title_color: $white,
 );
