Added afternoon theme

--- a/weather/src/styles/styles.scss
+++ b/weather/src/styles/styles.scss
@@ -6,9 +6,9 @@
   box-sizing: border-box;
 }
 
-body::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
-}
+// body::-webkit-scrollbar {
+//   display: none; /* Safari and Chrome */
+// }
 
 // @media (max-width: 760px) {
 //   body {
