--- a/weather/src/styles/_mixins.scss
+++ b/weather/src/styles/_mixins.scss
@@ -1,9 +1,11 @@
 @use "./variables" as *;
 @import "./day.scss";
+@import "./afternoon.scss";
 @import "./night.scss";
 
 $themes: (
   day: $day,
+  afternoon: $afternoon,
   night: $night,
 );
 
