--- a/weather/src/styles/afternoon.scss
+++ b/weather/src/styles/afternoon.scss
@@ -1,7 +1,6 @@
 @use "./variables" as *;
 
 $afternoon: (
-
   background_color: (
     url(../assets/clouds_sunset.svg) repeat,
     linear-gradient(
@@ -19,16 +18,15 @@ $afternoon: (
         hsl(252deg 57% 51%) 63%,
         hsl(234deg 70% 48%) 81%,
         hsl(215deg 82% 44%) 100%
-) fixed,
+      )
+      fixed,
   ),
-
-  // TODO for wider screens
   background_color_wide: (
     url(../assets/clouds_bg.svg) repeat,
     linear-gradient(to bottom, $yellow, $bg_blue) fixed,
   ),
-  searchbar_color:rgb(244, 228, 209),
-  weather_box_color:hsl(345deg 25% 56%),
+  searchbar_color: rgb(244, 228, 209),
+  weather_box_color: hsl(345deg 25% 56%),
   text_color: $text_color,
   title_color: $title_color,
 );
