--- a/weather/src/components/CurrentWeather/CurrentWeather.module.scss
+++ b/weather/src/components/CurrentWeather/CurrentWeather.module.scss
@@ -70,3 +70,17 @@
   //   top: -10%;
   // }
 }
+
+// @keyframes float {
+//   0%,
+//   100% {
+//     transform: translateY(-5px);
+//   }
+//   50% {
+//     transform: translateY(10px);
+//   }
+// }
+
+// .float {
+//   animation: float 2s linear infinite;
+// }
