Added TemperatureDetails and Forecast component

--- a/weather/src/styles/_day.scss
+++ b/weather/src/styles/_day.scss
@@ -12,5 +12,6 @@ $day: (
   searchbar_color: $baby_blue,
   weather_box_color: $baby_blue,
   text_color: $text_color,
+  placeholder_text_color: red,
   title_color: $title_color,
 );
