--- a/weather/src/components/SearchBar/SearchBar.module.scss
+++ b/weather/src/components/SearchBar/SearchBar.module.scss
@@ -25,6 +25,7 @@
 
       &:hover {
         @include themify("color", "title_color");
+        transform: scale(1.1);
       }
     }
   }
@@ -35,14 +36,32 @@
     @include themify("color", "title_color");
     border: none;
     background: transparent;
+    text-transform: capitalize;
 
     &::placeholder {
       font-size: 1.2rem;
-      @include themify("color", "text_color");
+      text-transform: lowercase;
+      @include themify("color", "placeholder_text_color");
     }
 
     &:focus {
-      outline: transparent;
+      outline: none;
     }
+  }
+}
+
+.units {
+  display: flex;
+  gap: 1.25rem;
+
+  button {
+    @include reset_btn;
+    background: #fff;
+
+    font-size: 1.2rem;
+    padding: 5px 8px;
+    border-radius: 50%;
+    box-shadow: 0 2px 2px rgb(0, 0, 0, 0.1);
+    cursor: pointer;
   }
 }
