--- a/weather/src/components/Forecast/Forecast.module.scss
+++ b/weather/src/components/Forecast/Forecast.module.scss
@@ -2,12 +2,8 @@
 @use "../../styles/mixins" as *;
 
 .forecast_container {
-  overflow-x: hidden;
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  scrollbar-width: none; /* Firefox */
   border-radius: 25px;
   padding: 10px 25px;
-  height: 12rem;
 
   @include themify("background", "forecast_box_color");
   background-size: auto;
@@ -23,11 +19,16 @@
     display: flex;
     justify-content: space-around;
 
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+
     .forecast {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      min-width: 150px;
 
       .forecast_title {
         font-size: 1.2rem;
