--- a/weather/src/components/Forecast/Forecast.module.scss
+++ b/weather/src/components/Forecast/Forecast.module.scss
@@ -8,13 +8,13 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: red;
+  background: rgba($title_color, 0.7);
   border-radius: 1.5rem;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
+  background: rgba($title_color, 0.9);
 }
 
 .forecast_container {
@@ -22,6 +22,7 @@
   padding: 10px 25px;
 
   @include themify("background", "forecast_box_color");
+  //   background: rgba($color: #fff, $alpha: 0.6);
   background-size: auto;
   box-shadow: 0 2px 4px rgb(0, 0, 0, 0.2);
 
@@ -33,7 +34,10 @@
 
   .forecast_box {
     display: flex;
-    // justify-content: space-around;
+    height: 10rem;
+    padding: 10px 15px;
+    // gap: 15px;
+    justify-content: space-between;
 
     overflow-x: auto;
     overflow-y: hidden;
@@ -44,7 +48,16 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      min-width: 150px;
+      min-width: 120px;
+
+      //   border-radius: 25px;
+      //   transition: all 0.2s;
+      //   cursor: pointer;
+
+      //   &:hover {
+      //     @include themify("background", "forecast_box_color");
+      //     box-shadow: 0 2px 4px rgb(0, 0, 0, 0.4);
+      //   }
 
       .forecast_title {
         font-size: 1.2rem;
