Changes on Forecast

--- a/weather/src/components/Forecast/Forecast.module.scss
+++ b/weather/src/components/Forecast/Forecast.module.scss
@@ -30,6 +30,7 @@
     line-height: 2;
     font-size: 1.2rem;
     font-weight: 600;
+    @include themify("color", "title_color");
   }
 
   .forecast_box {
@@ -61,15 +62,19 @@
 
       .forecast_title {
         font-size: 1.2rem;
+        font-weight: 500;
+        @include themify("color", "text_color");
       }
 
       .forecast_detail {
         font-size: 1.2rem;
         font-weight: 600;
+        @include themify("color", "title_color");
       }
 
       .forecast_temp {
         font-size: 1.2rem;
+        @include themify("color", "text_color");
       }
     }
   }
