--- a/weather/src/components/Forecast/Forecast.module.scss
+++ b/weather/src/components/Forecast/Forecast.module.scss
@@ -26,7 +26,7 @@
   background-size: auto;
   box-shadow: 0 2px 4px rgb(0, 0, 0, 0.2);
 
-  .forecast_container_title {
+  .title {
     line-height: 2;
     font-size: 1.2rem;
     font-weight: 600;
@@ -77,5 +77,9 @@
         @include themify("color", "text_color");
       }
     }
+  }
+
+  .centered {
+    justify-content: space-between;
   }
 }
