--- a/weather/src/components/SearchBar/SearchBar.module.scss
+++ b/weather/src/components/SearchBar/SearchBar.module.scss
@@ -14,20 +14,21 @@
   align-items: center;
   gap: 10px;
 
-  .icon_btn {
-    @include reset_btn;
+  // .icon_btn {
+  //   @include reset_btn;
+  //   cursor: pointer;
+
+  .icon {
+    font-size: 1.5rem;
+    @include themify("color", "text_color");
     cursor: pointer;
+    transition: all 0.2s;
 
-    .icon {
-      font-size: 1.5rem;
-      @include themify("color", "text_color");
-      transition: all 0.2s;
-
-      &:hover {
-        @include themify("color", "title_color");
-        transform: scale(1.1);
-      }
+    &:hover {
+      @include themify("color", "title_color");
+      transform: scale(1.1);
     }
+    // }
   }
 
   .input {
