--- a/weather/src/components/SearchBar/SearchBar.module.scss
+++ b/weather/src/components/SearchBar/SearchBar.module.scss
@@ -55,13 +55,14 @@
   display: flex;
   gap: 1.25rem;
 
-  button {
+  .unit_btn {
     @include reset_btn;
     background: #fff;
 
     font-size: 1.2rem;
-    padding: 5px 8px;
-    border-radius: 50%;
+    padding: 5px;
+    width: 50px;
+    border-radius: 15px;
     box-shadow: 0 2px 2px rgb(0, 0, 0, 0.1);
     cursor: pointer;
   }
