--- a/weather/src/components/CurrentWeather/CurrentWeather.module.scss
+++ b/weather/src/components/CurrentWeather/CurrentWeather.module.scss
@@ -3,7 +3,7 @@
 
 .weather_box {
   @include themify("background", "weather_box_color");
-  // height: 15rem;
+  height: 20rem;
 
   border-radius: 25px;
   padding: 0.625rem;
@@ -12,6 +12,8 @@
 
   display: flex;
   flex-direction: column;
+
+  justify-content: center;
   gap: 10px;
 
   // display: grid;
@@ -34,35 +36,39 @@
     align-items: center;
     gap: 1rem;
     padding: 0 20px;
-
-    background: pink;
+    // background: pink;
 
     .temperature {
       @include themify("color", "title_color");
-      font-size: 5rem;
-      font-weight: 500;
+      font-size: 6rem;
+      font-weight: 400;
     }
 
     .description_container {
       display: flex;
       flex-direction: column;
 
-      .city_name {
-        @include themify("color", "title_color");
-        font-size: 2.5rem;
-        font-weight: 600;
+      .date {
+        display: flex;
+        gap: 10px;
+
+        .city_name {
+          @include themify("color", "title_color");
+          font-size: 1.5rem;
+          font-weight: 500;
+        }
       }
 
       .weather_description {
-        color: $black;
-        font-size: 1.5rem;
+        @include themify("color", "text_color");
+        font-size: 2.5rem;
+        font-weight: 500;
         text-transform: capitalize;
       }
     }
   }
 
   .details_container {
-    background: pink;
     display: flex;
 
     .weather_details {
