--- a/weather/src/styles/_day.scss
+++ b/weather/src/styles/_day.scss
@@ -10,9 +10,13 @@ $day: (
     linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   searchbar_color: $baby_blue,
+
   weather_box_color: $baby_blue,
+  // weather_box_color: linear-gradient(90deg, #b1c0d4, #4e71a9),
   forecast_box_color: rgba($baby_blue, 0.7),
   text_color: $text_color,
+
   placeholder_text_color: red,
+
   title_color: $title_color,
 );
