--- a/weather/src/components/TemperatureDetails/TemperatureDetails.module.scss
+++ b/weather/src/components/TemperatureDetails/TemperatureDetails.module.scss
@@ -30,3 +30,22 @@
     }
   }
 }
+
+@media (max-width: 750px) {
+  .details_container {
+    // display: flex;
+    // flex-direction: column;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 560px) {
+  .details_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+}
