--- a/weather/src/components/CurrentWeather/CurrentWeather.module.scss
+++ b/weather/src/components/CurrentWeather/CurrentWeather.module.scss
@@ -121,8 +121,8 @@
 
 @media (max-width: 47em) {
   .weather_box {
-    height: 30rem;
-    justify-content: flex-start;
+    // height: 30rem;
+    // justify-content: flex-start;
 
     // grid-template-columns: 1fr;
   }
@@ -134,15 +134,17 @@
   // }
 }
 
-@media (max-width: 560px) {
+@media (max-width: 35em) {
   .weather_box {
+    height: 30rem;
+
     .weather_info {
       .temperature {
-        font-size: 2.5rem;
+        font-size: 2rem;
       }
       .description_container {
         .date {
-          gap: 5px;
+          flex-direction: column;
 
           .city_name {
             font-size: 0.8rem;
@@ -150,7 +152,7 @@
         }
 
         .weather_description {
-          font-size: 1.2rem;
+          font-size: 1rem;
         }
       }
     }
