--- a/weather/src/components/TemperatureDetails/TemperatureDetails.module.scss
+++ b/weather/src/components/TemperatureDetails/TemperatureDetails.module.scss
@@ -13,6 +13,7 @@
       align-items: center;
       gap: 5px;
       margin: 10px 0;
+      font-size: 1rem;
 
       .weather_details_icon {
         @include themify("color", "text_color");
@@ -31,21 +32,21 @@
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 47em) {
   .details_container {
-    // display: flex;
-    // flex-direction: column;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    align-items: center;
+    .weather_details {
+      .weather_detail {
+        font-size: 0.8rem;
+      }
+    }
   }
 }
 
-@media (max-width: 560px) {
+@media (max-width: 35em) {
   .details_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
   }
 }
