--- a/weather/src/styles/_variables.scss
+++ b/weather/src/styles/_variables.scss
@@ -1,9 +1,6 @@
 $bg_light_blue: #c3e6f9;
 $bg_blue: #31a1ec;
 
-// $bg_light_blue: #092b56;
-// $bg_blue: #051a33;
-
 $baby_blue: rgba(226, 240, 251, 1);
 $white: #fff;
 $black: #000;
@@ -14,5 +11,5 @@ $orange: #f09559;
 
 $cloud_color: 255, 255, 255;
 
-$title_color: #4581c5;
-$text_color: #7b98b2;
+$title_color: #5a7cb3;
+$text_color: #4e71a9;
