--- a/weather/src/assets/icons/PartlyCloudy.scss
+++ b/weather/src/assets/icons/PartlyCloudy.scss
@@ -15,3 +15,17 @@
     @include shadow;
   }
 }
+
+@keyframes float {
+  0%,
+  100% {
+    transform: translateY(-5px);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+}
+
+.float {
+  animation: float 3s linear infinite;
+}
