--- a/weather/src/components/SearchBar/SearchBar.module.scss
+++ b/weather/src/components/SearchBar/SearchBar.module.scss
@@ -57,7 +57,8 @@
 
   .unit_btn {
     @include reset_btn;
-    background: #fff;
+    @include themify("background", "btn_color");
+    @include themify("color", "btn_text");
 
     font-size: 1.2rem;
     padding: 5px;
@@ -65,5 +66,10 @@
     border-radius: 15px;
     box-shadow: 0 2px 2px rgb(0, 0, 0, 0.1);
     cursor: pointer;
+    transition: all 0.2s;
+
+    &:hover {
+      @include themify("background", "btn_hover");
+    }
   }
 }
