--- a/weather/src/styles/_afternoon.scss
+++ b/weather/src/styles/_afternoon.scss
@@ -23,7 +23,23 @@ $afternoon: (
   ),
   background_color_wide: (
     url(../assets/clouds_bg.svg) repeat,
-    linear-gradient(to bottom, $yellow, $bg_blue) fixed,
+    linear-gradient(
+        0deg,
+        hsl(13deg 51% 56%) 0%,
+        hsl(8deg 58% 57%) 1%,
+        hsl(4deg 66% 57%) 3%,
+        hsl(360deg 73% 57%) 6%,
+        hsl(342deg 68% 60%) 10%,
+        hsl(324deg 63% 63%) 14%,
+        hsl(307deg 57% 66%) 20%,
+        hsl(295deg 53% 62%) 27%,
+        hsl(283deg 48% 58%) 36%,
+        hsl(271deg 44% 55%) 48%,
+        hsl(252deg 57% 51%) 63%,
+        hsl(234deg 70% 48%) 81%,
+        hsl(215deg 82% 44%) 100%
+      )
+      fixed,
   ),
   searchbar_color: rgb(244, 228, 209),
   weather_box_color: hsl(345deg 25% 56%),
