--- a/weather/src/styles/_night.scss
+++ b/weather/src/styles/_night.scss
@@ -11,13 +11,13 @@ $night: (
     url(../assets/nightsky.svg) repeat,
     linear-gradient(to bottom, #020d18, #15366f) fixed,
   ),
-  searchbar_color: #515884,
-  weather_box_color: linear-gradient(90deg, #0f264e, #071a32),
-  forecast_box_color: rgba(#051a33, 0.8),
-  text_color: #79a4cf,
-  title_color: #8199b2,
+  searchbar_color: #494f77,
+  weather_box_color: linear-gradient(90deg, #41466a, #292c42),
+  forecast_box_color: rgba(#393e5c, 0.9),
+  text_color: #dfdfe0,
+  title_color: #a5a7b4,
 
-  btn_color: #051a33,
-  btn_hover: $baby_blue,
+  btn_color: #515884,
+  btn_hover: #424767,
   btn_text: $white,
 );
