Added rain theme

--- a/weather/src/styles/_afternoon.scss
+++ b/weather/src/styles/_afternoon.scss
@@ -15,6 +15,10 @@ $afternoon: (
   forecast_box_color: rgba(#8d96d1, 0.7),
   text_color: #eceef7,
   title_color: #d9dcf0,
+
+  forecast_title_color: #d9dcf0,
+  forecast_text_color: #eceef7,
+
   btn_color: #6c6cbb,
   btn_hover: #5462ba,
   btn_text: #eceef7,
