--- a/weather/src/styles/_night.scss
+++ b/weather/src/styles/_night.scss
@@ -17,6 +17,9 @@ $night: (
   text_color: #dfdfe0,
   title_color: #a5a7b4,
 
+  forecast_title_color: #a5a7b4,
+  forecast_text_color: #dfdfe0,
+
   btn_color: #515884,
   btn_hover: #424767,
   btn_text: $white,
