--- a/weather/src/styles/_day.scss
+++ b/weather/src/styles/_day.scss
@@ -18,6 +18,9 @@ $day: (
   text_color: $text_color,
   title_color: $title_color,
 
+  forecast_title_color: $title_color,
+  forecast_text_color: $text_color,
+
   btn_color: $white,
   btn_hover: $baby_blue,
   btn_text: $black,
