Added more background images

--- a/weather/src/styles/_afternoon.scss
+++ b/weather/src/styles/_afternoon.scss
@@ -6,7 +6,7 @@ $afternoon: (
     linear-gradient(to bottom, #4150b2, #986aac, #f18671, #f6c778) fixed,
   ),
   background_color_wide: (
-    url(../assets/clouds_bg.svg) repeat,
+    url(../assets/backgrounds/clouds_bg.svg) repeat,
     linear-gradient(to bottom, #4150b2, #986aac, #f18671, #f6c778) fixed,
   ),
   searchbar_color: #6c6cbb,
