--- a/weather/src/styles/_day.scss
+++ b/weather/src/styles/_day.scss
@@ -2,11 +2,12 @@
 
 $day: (
   background_color: (
-    url(../assets/clouds_md.svg) repeat,
+    url(../assets/backgrounds/sea_clouds_md.svg) repeat,
     linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   background_color_wide: (
-    url(../assets/clouds_bg.svg) repeat,
+    url(../assets/backgrounds/sea_clouds_lg.svg) repeat,
+
     linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   searchbar_color: #a0d5f9,
